<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.jogorogerio.logintestapplication.MainActivity">

    <TextView
        android:id="@+id/main_loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginText"
        android:layout_marginLeft="70dp"
        android:textSize="29sp"
        android:layout_marginTop="80dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_loginName"
        android:hint="@string/loginHint"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_password"
        android:hint="@string/passwordHint"
        android:textSize="20sp"
        android:paddingTop="10dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_buttonLogin"
            android:text="@string/buttonLogin"
            android:textSize="20sp"/>
            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_buttonCancel"
            android:text="@string/buttonCancel"
            android:textSize="20sp"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>
